kubernetes/luffy/apps/network/traefik/dashboard/default.yaml
---
apiVersion: traefik.io/v1alpha1 # traefik.containo.us/v1alpha1 depreciated in Traefik v3
kind: Middleware
metadata:
  name: default-headers
spec:
  headers:
    browserXssFilter: true
    contentTypeNosniff: true
    forceSTSHeader: true
    stsIncludeSubdomains: true
    stsPreload: true
    stsSeconds: 15552000
    referrerPolicy: no-referrer
    contentSecurityPolicy: "default-src 'none'; script-src 'self' 'unsafe-inline'\
      \ 'unsafe-eval' https:; style-src 'self' 'unsafe-inline' https:; img-src 'self'\
      \ data: https:; font-src 'self' https: data:; connect-src 'self' https:; frame-src\
      \ 'self' https:; media-src 'self' https:; object-src 'none'; frame-ancestors\
      \ 'self'; base-uri 'self'; form-action 'self';"
    customFrameOptionsValue: SAMEORIGIN
    customRequestHeaders:
      X-Forwarded-Proto: https
